--- a/src/BadConsoleApp/BadConsoleApp.csproj
+++ b/src/BadConsoleApp/BadConsoleApp.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Codes\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.8" />
+  </ItemGroup>
+
 </Project>
